adicionado uma separação de previsores e classes e treinamento com 3 algoritmos

--- a/trabalhoGA/alzheimers_disease.ipynb
+++ b/trabalhoGA/alzheimers_disease.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,12 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, accuracy_score, precision_score,recall_score,f1_score"
    ]
   },
   {
@@ -16242,6 +16247,92 @@
     "print(f'Porcentagem de pessoas COM diagnóstico de Alzheimer com ADL abaixo da média: {positive_diagnosis_ADL_below_mean_percentage:.2f}%')\n",
     "print(f'Porcentagem de pessoas SEM diagnóstico de Alzheimer com ADL acima da média: {negative_diagnosis_ADL_above_mean_percentage:.2f}%')\n",
     "print(f'Porcentagem de pessoas SEM diagnóstico de Alzheimer com ADL abaixo da média: {negative_diagnosis_ADL_below_mean_percentage:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Separando previsores e classe\n",
+    "X = alzheimers_data[['MMSE', 'FunctionalAssessment', 'MemoryComplaints', 'BehavioralProblems', 'ADL']]\n",
+    "y = alzheimers_data['Diagnosis']\n",
+    "\n",
+    "# Dividindo o dataset em treino e teste (70% treino e 30% teste)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Logistic Regression\n",
+      "Accuracy: 0.83\n",
+      "Precision: 0.80\n",
+      "Recall: 0.72\n",
+      "F1: 0.76\n",
+      "----------------------------------------\n",
+      "Model: Random Forest\n",
+      "Accuracy: 0.95\n",
+      "Precision: 0.96\n",
+      "Recall: 0.90\n",
+      "F1: 0.93\n",
+      "----------------------------------------\n",
+      "Model: Decision Tree\n",
+      "Accuracy: 0.90\n",
+      "Precision: 0.85\n",
+      "Recall: 0.86\n",
+      "F1: 0.85\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = {\n",
+    "  \"Logistic Regression\": LogisticRegression(),\n",
+    "  \"Random Forest\": RandomForestClassifier(),\n",
+    "  \"Decision Tree\": DecisionTreeClassifier(),\n",
+    "}\n",
+    "\n",
+    "results = {}\n",
+    "\n",
+    "for model_name, model in models.items():\n",
+    "  model.fit(X_train, y_train)\n",
+    "  y_pred = model.predict(X_test)\n",
+    "\n",
+    "  accuracy = accuracy_score(y_test, y_pred)\n",
+    "  precision = precision_score(y_test, y_pred)\n",
+    "  recall = recall_score(y_test, y_pred)\n",
+    "  f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "  results[model_name] = {\n",
+    "    \"accuracy\": accuracy,\n",
+    "    \"precision\": precision,\n",
+    "    \"recall\": recall,\n",
+    "    \"f1\": f1\n",
+    "  }\n",
+    "\n",
+    "for name, metrics in results.items():\n",
+    "  print(f\"Model: {name}\")\n",
+    "  print(f\"Accuracy: {metrics['accuracy']:.2f}\")\n",
+    "  print(f\"Precision: {metrics['precision']:.2f}\")\n",
+    "  print(f\"Recall: {metrics['recall']:.2f}\")\n",
+    "  print(f\"F1: {metrics['f1']:.2f}\")\n",
+    "  print(\"-\" * 40)"
    ]
   }
  ],
