Feat: Initial comments

--- a/trabalhoGA/alzheimers_disease.ipynb
+++ b/trabalhoGA/alzheimers_disease.ipynb
@@ -1,24 +1,69 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# imports\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
    "source": [
-    "# imports\n",
+    "# Trabalho do Grau A - Ciência de Dados e Big Data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Definições Iniciais\n",
+    "\n",
+    "- Integrantes: João Accorsi e Rafael Klauck.\n",
+    "- Dataset: Alzheimer's Disease Dataset.\n",
+    "- Professor: Felipe de Morais.\n",
+    "- Grupo: 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Modelagem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.1 Dataset Escolhido \n",
+    "\n",
+    "O presente trabalho consta com a implementação de um modelo de Machile Learning, a partir do Dataset 'Alzheimer's Disease Dataset'. A base de dados possui informações de 2149 pacientes, com características que podem influenciar no diagnóstico do Alzheimer, como fatores cotidianos (fumante, IMC, frquência com que prática de atividade física etc), histórico médico (familiares com alzheimer, diabetes etc), médidas clínicas (nível colesterol/triglicerídeos etc), aptdão cognitiva (teste de memória, exame mental etc), sintomas (confusão, desorientação, nível de esquecimento etc); e por fim, o diagnóstico de possuir ou não Alzheimer. Desta forma, o objetivo da construção do algoritmo de Machine Learning é identificar quais características são mais relevantes, e levam ao paciente a desenvolver Alzhaimer, treinando assim um modelo, o qual será capaz de classificar um novo paciete com tendência ou não a desenvolver Alzhaimer.\n",
+    "\n",
+    "A base de dados pode ser encontrado no Kaggle https://www.kaggle.com/datasets/rabieelkharoua/alzheimers-disease-dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Implementação"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.1 Importações"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inicialmente, a importação de bibliotecas necessárias é feita."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -31,8 +76,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Em seguida, o download do dataset direto do Kaggle, e a sua vizualisação."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +470,7 @@
        "[2149 rows x 35 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,6 +478,13 @@
    "source": [
     "alzheimers_data = pd.read_csv('alzheimers_disease_data.csv')\n",
     "alzheimers_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.2 Pré Processamento dos Dados"
    ]
   },
   {
