Feat: Add comments to the training part

--- a/trabalhoGA/alzheimers_disease.ipynb
+++ b/trabalhoGA/alzheimers_disease.ipynb
@@ -16456,10 +16456,13 @@
     "Assim, três modelos de Machile Learning foram utilizados para o treinamento:\n",
     "\n",
     "- Logistic Regression\n",
-    "- Random Forest\n",
-    "- Decision Tree\n",
+    "    - Técnica estatística que produz a partir de um conjunto de observações, um modelo que permita a predição de valores tomados por uma variável categórica, a partir de variáveis explicativas contínuas e/ou binárias.\n",
     "\n",
-    "--> Explicar cada um com mais detalhes"
+    "- Random Forest\n",
+    "    - Construção de multiplas árvores de decisão de forma aleatória, e na forma de uma votação, a árvore final é escolhida, e usada.\n",
+    "\n",
+    "- Decision Tree\n",
+    "    - Representação de fluxo do algoritmo através de árvores de decisão."
    ]
   },
   {
