adicionado tabela com os resultados das metricas e se está acima ou abaixo da media

--- a/trabalhoGA/alzheimers_disease.ipynb
+++ b/trabalhoGA/alzheimers_disease.ipynb
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2226,7 +2226,7 @@
        "max                     1.000000       1.000000        1.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2246,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2699,7 +2699,7 @@
        "max                     1.000000       1.000000        0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2731,7 +2731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -16592,7 +16592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -16636,7 +16636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -16684,7 +16684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -16727,14 +16727,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fazer uma síntese dos parâmetros."
+    "| Diagnóstico  | Métrica  |  Acima da Média  |  Abaixo da Média  |\n",
+    "|---|---|---|---|\n",
+    "| Positivo | MMSE | 35,66% | 64,34% |\n",
+    "| Negativo | MMSE | 55,87% | 44,13% |\n",
+    "| Positivo | FunctionalAssessment | 22,89% | 77,11% |\n",
+    "| Negativo | FunctionalAssessment | 65,15% | 34,85% |\n",
+    "| Positivo | ADL | 25,66% | 74,34% |\n",
+    "| Negativo | ADL | 64,43% | 35,57% |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Talvez uma tabela com o resumo dos parâmetros abaixo e acima da média..."
+    "Analisando a tabela acima, é possível observar que a porcentagem de pessoas com diagnóstico positivo de Alzheimer é maior quando o MMSE é menor, o FunctionalAssessment é menor e o ADL é menor. Isso corrobora com a análise anterior, onde essas métricas são mais relevantes para o diagnóstico. Além disso, as métricas MemoryComplaints e BehavioralProblems também são relevantes, pois possuem uma diferença significativa nas médias entre os diagnósticos positivos e negativos, como visto nos gráficos anteriores.\n",
+    "\n",
+    "Saber as métricas mais relevantes é importante para a construção do modelo de Machine Learning, pois assim é possível selecionar as features mais importantes para o diagnóstico."
    ]
   },
   {
@@ -16753,7 +16762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -16787,7 +16796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -16806,14 +16815,14 @@
       "----------------------------------------\n",
       "Model: Random Forest\n",
       "Accuracy: 0.95\n",
-      "Precision: 0.97\n",
+      "Precision: 0.96\n",
       "Recall: 0.90\n",
       "F1: 0.93\n",
       "----------------------------------------\n",
       "Model: Decision Tree\n",
       "Accuracy: 0.89\n",
       "Precision: 0.84\n",
-      "Recall: 0.86\n",
+      "Recall: 0.85\n",
       "F1: 0.85\n",
       "----------------------------------------\n"
      ]
